--- a/src/assets/App.scss
+++ b/src/assets/App.scss
@@ -1,3 +1,8 @@
-:root {
-  
+
+.card {
+  --bg-color: hsl(0, 0%, 8%);
+  --card-color: hsl(0, 0%, 9%);
+  --border-width: 3px;
+  --border-color: hsla(0, 0%, 100%, .35);
+  --shadow-width: 400px;
 }
