--- a/src/assets/App.scss
+++ b/src/assets/App.scss
@@ -2,7 +2,7 @@
 .card {
   --bg-color: hsl(0, 0%, 8%);
   --card-color: hsl(0, 0%, 9%);
-  --border-width: 3px;
+  --border-width: 0.3rem;
   --border-color: hsla(0, 0%, 100%, .35);
-  --shadow-width: 400px;
+  --shadow-width: 800px;
 }
