--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -20,7 +20,9 @@
   font-size: 62.5%;
   --font-weight-extra-bold: 800;
   --font-weight-bold: 700;
+  --font-weight-medium-plus: 500;
   --font-weight-medium: 400;
+  --font-weight-light-plus: 300;
   --font-weight-light: 200;
   --font-family: "Outfit",Futura,-apple-system,sans-serif;
 }
